Fixed word wrap in console.

--- a/css/tryhaskell.css
+++ b/css/tryhaskell.css
@@ -105,7 +105,7 @@ div.console {
 div.footer {
     line-height: 1.3em;
 }
-div.console { background:#fff;font-size:14px; position:relative }
+div.console { background:#fff;font-size:14px; position:relative; word-wrap: break-word }
 div.console div.jquery-console-inner 
 { height:150px; overflow:auto; background:white}
 div.console div.jquery-console-prompt-box
